--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "mathjs": "^12.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
   }
 }
