--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "dev": "vite",
     "test": "vitest",
+    "lint": "standard",
     "coverage": "vitest run --coverage"
   },
   "keywords": [],
@@ -18,6 +19,7 @@
     "@vitejs/plugin-react": "4.2.1",
     "@vitest/coverage-v8": "^1.3.1",
     "happy-dom": "13.6.2",
+    "standard": "^17.1.0",
     "vite": "5.1.4",
     "vitest": "1.3.1"
   },
@@ -28,5 +30,10 @@
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.9.5"
+  },
+  "eslintConfig": {
+    "extends": [
+      "./node_modules/standard/eslintrc.json"
+    ]
   }
 }
