--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,5 +20,6 @@ jobs:
           cache: 'npm'
       - run: npm ci --legacy-peer-deps --no-fund --no-audit
       - run: npm run lint
+      - run: npm run test
       - run: npm run build
 
