--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,12 +17,5 @@ jobs:
         node-version: [18.x, 20.x, 22.x]
 
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          cache: 'npm'
-      - run: npm ci --legacy-peer-deps --no-fund --no-audit
-      - run: npm run lint
-      - run: npm run test
-      - run: npm run build
-
+      - name: 'Hello world test'
+        run: echo 'hello world'
